# satp-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  dissertation.fdb_latexmk  dissertation.fls  gen.py  hllpp_tables.txt  main.cpp  results.csv
codex/: chat_handoff.md  merge_heterogeneous_roadmap.md  thesis_writing_rules.md
docker/: run.sh
notebooks/: 01_streaming_stima_vs_reale.ipynb  02_streaming_varianza.ipynb  10_ch5_streaming_analysis.ipynb  11_ch5_merge_analysis.ipynb  12_ch5_best_config_analysis.ipynb  13_ch5_seed_sensitivity_by_setting.ipynb  16_ch5_typeA_prefix_constant_rho.ipynb  17_ch5_typeA_prefix_constant_rho_no_pc.ipynb  18_ch5_typeA_prefix_constant_rho_hll_hllpp.ipynb  19_ch5_typeB_prefix_constant_rho.ipynb  20_ch5_advisor_ratio_processed_vs_distinct.ipynb  20_ch5_ratio_processed_vs_distinct_streaming.ipynb  21_ch5_merge_hllpp_homogeneous_baseline.ipynb  22_ch5_merge_hllpp_hash_mismatch.ipynb  23_ch5_merge_hllpp_precision_mismatch.ipynb  24_ch5_streaming_sweep_precisione.ipynb  dataset_statistical_exploration.ipynb  f0_hat_vs_sample_size.ipynb  hll_vs_hllpp_difference_n10000000.ipynb  master.ipynb  results_cross_mode.ipynb  results_normal.ipynb  results_streaming.ipynb  streaming_hll_hllpp_paper_analysis.ipynb  streaming_seed_21041998_n10000000_by_d.ipynb
notes/: ch4_ch5_evidence.md  ch4_ch5_revision_iter1.md  ch4_ch5_revision_iter2.md  ch4_ch5_revision_iter3.md  ch4_ch5_revision_iter4.md  ch4_ch5_revision_iter5.md  ch5_best_config_meta.csv  ch5_best_convergence_t5pct.csv  ch5_best_merge_nonzero_counts.csv  ch5_best_merge_summary.csv  ch5_best_streaming_summary.csv  ch5_csv_analysis.md  ch5_italian_review.md  ch5_merge_nonzero_counts.csv  ch5_merge_overview.csv  ch5_merge_summary_by_algorithm.csv  ch5_merge_summary_by_param.csv  ch5_results_plan.md  ch5_scientific_graph_suggestions.md  ch5_seed_sensitivity_best_setting_by_seed.csv  ch5_seed_sensitivity_by_setting.csv  ch5_seed_sensitivity_report_table.csv  ch5_seed_sensitivity_top5_by_algo.csv  ch5_streaming_overview.csv  ch5_streaming_param_sensitivity.csv  ch5_streaming_reference_summary.csv  code_architecture_map.md  papers_summaries.md  qa_report.md  style_guide_extracted.md
results/: merge_hpp_hash_mismatch_ctrl_summary.csv  merge_hpp_hash_mismatch_summary_global.csv  merge_hpp_hash_mismatch_summary_runs.csv  merge_hpp_hash_mismatch_unsafe_summary.csv  merge_hpp_hom_summary.csv  merge_hpp_precision_mismatch_pair_groups.csv  merge_hpp_precision_mismatch_summary_global.csv  merge_hpp_precision_mismatch_summary_runs.csv  streaming_precision_sweep_best_params.csv  streaming_precision_sweep_summary_endpoint.csv
scripts/: dataset_stats.py  generate_all_plots.py  generate_dataset.py  generate_dataset_puppis.py  generate_partitioned_dataset.py  generate_partitioned_dataset_bin.py  generate_plots_from_csv.py  generate_prefix_constant_rho_dataset_bin.py  generate_prefix_constant_rho_set.sh  orchestrate_benchmarks.py  orchestrate_heterogeneous_merge.py  run_minimal_hash_mismatch_matrix.fish  run_minimal_precision_mismatch_matrix.fish  streaming_precision_sweep_analysis.py
tests/: AlgorithmCatalogTest.cpp  (+4 more)
(+607 files in other folders)
